<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/bottomContainer"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageViewBottom"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="fitXY"
                android:src="@drawable/song1" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp">

                    <TextView
                        android:id="@+id/titleBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:fontFamily="@font/affogato_medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Billian Billian"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/artistLengthBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/affogato_regular"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="Guru Randhava . 3:49"
                        android:textAlignment="center" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/menuBottom"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_pause_circle_outline_black_24dp"
                    android:tint="@android:color/darker_gray" />

            </FrameLayout>


        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/slideUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:elevation="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/topContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/song1" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:fontFamily="@font/affogato_medium"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="Billian Billia"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/artistLength"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/affogato_regular"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="Samsung . 3:49"
                            android:textAlignment="center"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="end|center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="10dp"
                        android:src="@drawable/ic_more_vert_black_24dp"
                        android:tint="@android:color/white"
                        android:visibility="gone" />

                </FrameLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/topContainer" />

            <LinearLayout
                android:id="@+id/playbackControls"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/previousButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:src="@drawable/ic_skip_previous_black_24dp"
                    android:tint="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/playPauseButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_pause_circle_outline_black_24dp"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/nextButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="16dp"
                    android:src="@drawable/ic_skip_next_black_24dp"
                    android:tint="@android:color/darker_gray" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/large"
                app:layout_constraintBottom_toTopOf="@id/playbackControls"
                app:layout_constraintTop_toBottomOf="@id/topContainer" />
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>